Учтены все замечания v.2